hw_04/k8s_manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-app
  namespace: m
spec:
  replicas: 2
  selector:
    matchLabels:
      app: crud-app
  template:
    metadata:
      labels:
        app: crud-app
    spec:
      containers:
        - name: app
          image: nislovskaya/hw_04:latest
          ports:
            - containerPort: 8080
